Revision history for Finance-Quote-IEX

{{$NEXT}}

0.001001 2018-01-18
    - Fix date parsing
    - Add error checking

0.001000 2017-12-05
    - Initial release