@@ -1,4 +1,4 @@
-This software is Copyright (c) 2018 by Jeffrey T. Palmer.
+This software is Copyright (c) 2019 by Jeffrey T. Palmer.
 
 This is free software, licensed under:
 
