@@ -2,7 +2,9 @@ name    = Finance-Quote-IEX
 author  = Jeffrey T. Palmer <jtpalmer@cpan.org>
 license = MIT
 copyright_holder = Jeffrey T. Palmer
-copyright_year   = 2018
+copyright_year   = 2019
+
+[Deprecated]
 
 [@Filter]
 -bundle = @Basic
